<resources>

    <!-- Screen titles-->
    <string name="firstFrag_eventOverview">Event Overview</string>
    <string name="secondFrag_manageEvent">Manage Event Details</string>
    <string name="manageEvent">Event Information</string>
    <string name="appName">AppEventTracking</string>
    <string name="AppNameTitle">Life\'s Event Tracker</string>
    <string name="loginTitle">User account login</string>

    <!-- Strings used for event navigation -->
    <string name="submit">Submit</string>
    <string name="read">Review</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="returnPrevious">Return</string>
    <string name="PreviewApp">Click here to preview app instead.</string>

    <!-- Username and password-->
    <string name="usernameLoginText">Username:</string>
    <string name="promptEmail">Email</string>
    <string name="invalidUsername">Not a valid username</string>

    <string name="passwordLoginText">Password:</string>
    <string name="promptPassword">Password</string>
    <string name="invalidPassword">Password must be >5 characters</string>


    <!-- user account login-->
    <string name="SignIn">Sign in</string>
    <string name="loginSelectOption">&#160;OR&#160;</string>
    <string name="registerUser">Create an account</string>
    <string name="loginFailed">"Login failed"</string>
    <string name="welcome">"Welcome !"</string>

    <!-- Event information -->
    <string name="eventDate">Date</string>
    <string name="eventTime">Time</string>
    <string name="eventName">Event Name</string>
    <string name="eventDescribe">Description</string>
    <string name="eventLocation">Location</string>
    <string name="dateFormat">mm-dd-yyyy</string>
    <string name="timeFormat">hh:mm</string>

    <!--Settings Titles-->
    <string name="userAccount">Account</string>
    <string name="userHelp">Help</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="permissions">Permissions</string>

    <!-- Settings: Messages Preferences -->
    <string name="notificationsTitle">Receive in-app notifications</string>
    <string name="replyTitle">Default reply action</string>

    <!-- Settings: Select preferences/permissions -->
    <string name="notificationPermission">Allow notification(s)</string>
    <string name="messagePermission">Send and view SMS messages</string>
    <string name="message_summaryOn">Receive automated notifications using SMS messaging system within the device</string>
    <string name="message_summaryOff">Only receive notifications within application while app is running</string>

    <!--Sample Arrays: Event information-->
    <string-array name="eventsDateArray">
        <item>11–05-2023</item>
        <item>11-16-2023</item>
        <item>12-07-2023</item>
    </string-array>

    <string-array name="eventsTimeArray">
        <item>9:00</item>
        <item>12:00</item>
        <item>7:00</item>
    </string-array>

    <string-array name="eventsNameArray">
        <item>Wellness class</item>
        <item>Client Meeting with Joe</item>
        <item>All That Jazz Concert</item>
    </string-array>

    <string-array name="eventsDescribeArray">
        <item>Monthly wellness class at yoga building</item>
        <item>Meeting with returning client, Joe Doe</item>
        <item>Annual Jazz concert. Kick-off night for Jazz Festival</item>
    </string-array>

    <!--new Strings-->
    <string name="add">add</string>
    <string name="all">All</string>
    <string name="space1">&#160;</string>


</resources>