<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintManageEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageEvent">


    <ScrollView
        android:id="@+id/scrollManageEvent"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/LinearManageEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/manageEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manageEvent"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/manageDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eventDate"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dateFormat"
                android:inputType="date" />

            <TextView
                android:id="@+id/manageTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eventTime"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timeFormat"
                android:inputType="time" />

            <TextView
                android:id="@+id/manageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eventName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/eventName"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/manageDescribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eventDescribe"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEventDescribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/eventDescribe"
                android:inputType="textMultiLine"
                android:minLines="3" />

            <Button
                android:id="@+id/btnSubmitEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/submit" />

            <Button
                android:id="@+id/btnReturnEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/returnPrevious" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>