<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/linearLayoutEvents"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:paddingLeft="10dp"
android:paddingRight="10dp">

    <TextView
        android:id="@+id/eventTable_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp"
        android:text="@string/calendarDate" />

    <TextView
        android:id="@+id/eventTable_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp"
        android:text="@string/eventTime" />

    <TextView
        android:id="@+id/eventTable_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="2dp"
        android:text="@string/eventName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="2dp"
        android:text="@string/eventLocation" />

    <CheckBox
        android:id="@+id/checkBox_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
</LinearLayout>