<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsEventName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    // event date

    <TextView
        android:id="@+id/detailsEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/calendarDate"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    // ADD+EDIT event date

    <EditText
        android:id="@+id/editEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/dateFormat"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsEventDate" />+

    // event time

    <TextView
        android:id="@+id/detailsEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eventTime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editEventDate"
        app:layout_constraintTop_toBottomOf="@+id/editEventDate" />

    // ADD+EDIT event time

    <EditText
        android:id="@+id/editEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/timeFormat"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/detailsEventTime"
        app:layout_constraintTop_toBottomOf="@+id/detailsEventTime" />

    // event name

    <TextView
        android:id="@+id/detailsTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eventName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editEventTime"
        app:layout_constraintTop_toBottomOf="@+id/editEventTime" />

    // ADD+EDIT event name

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/eventName"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/detailsTextName"
        app:layout_constraintTop_toBottomOf="@+id/detailsTextName" />

    // event description

    <TextView
        android:id="@+id/detailsEventDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eventDescribe"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editEventName"
        app:layout_constraintTop_toBottomOf="@+id/editEventName" />

    // ADD+EDIT event description

    <EditText
        android:id="@+id/editEventDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/eventDescribe"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/detailsEventDescribe"
        app:layout_constraintTop_toBottomOf="@+id/detailsEventDescribe" />

    // event location

    <TextView
        android:id="@+id/detailsEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eventLocation"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editEventDescribe"
        app:layout_constraintTop_toBottomOf="@+id/editEventDescribe" />

    // ADD+EDIT event location

    <EditText
        android:id="@+id/editEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/eventLocation"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/detailsEventLocation"
        app:layout_constraintTop_toBottomOf="@+id/detailsEventLocation" />

    // guidelines to assist in layouts

    // guidelines to assist in layouts

    // submit all event data

    <Button
        android:id="@+id/createUpdateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/returnFromAddEvent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/returnFromAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/returnPrevious"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="587dp" />


</androidx.constraintlayout.widget.ConstraintLayout>